--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "woonuxt-settings",
-  "version": "1.0.29",
+  "version": "1.0.30",
   "description": "Module to get setting from WooNuxt Settings plugin installed on WordPress",
   "license": "MIT",
   "type": "module",
@@ -22,23 +22,20 @@
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
     "release": "npm run prepack && changelogen --release && npm publish && git push --follow-tags",
-    "lint": "eslint .",
-    "test": "vitest run",
-    "test:watch": "vitest watch"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@nuxt/kit": "^3.7.3",
+    "@nuxt/kit": "^3.7.4",
     "ohmyfetch": "^0.4.21"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/module-builder": "^0.5.1",
-    "@nuxt/schema": "^3.7.3",
-    "@nuxt/test-utils": "^3.7.3",
+    "@nuxt/module-builder": "^0.5.2",
+    "@nuxt/schema": "^3.7.4",
+    "@nuxt/test-utils": "^3.7.4",
     "changelogen": "^0.5.5",
     "eslint": "^8.50.0",
-    "nuxt": "^3.7.3",
-    "vitest": "^0.34.5"
+    "nuxt": "^3.7.4"
   },
   "directories": {
     "test": "test"
