chore: replace `ohmyfetch` with `ofetch`

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "ohmyfetch": "^0.4.21"
+    "ofetch": "^1.4.1"
   },
   "devDependencies": {
     "@nuxt/kit": "^3.16.1",
